--- a/test/fixtures/papers.yml
+++ b/test/fixtures/papers.yml
@@ -14,3 +14,12 @@ paper1:
   date: <%= Time.now %>
   minutes: 1
   room: room1
+
+paper2:
+  title: Paper 2
+  description: Just a Paper 2
+  family: <%= Paper::FAMILY_TUTORIAL %>
+  status: <%= Paper::STATUS_CONFIRMED %>
+  date: <%= Time.now %>
+  minutes: 1
+  room: room1
