--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -1,6 +1,6 @@
 # t.integer     :user_id,     :null => false
 # t.integer     :event_id,    :null => false
 
-payment1:
+payment_user1_event1:
   user: user1
   event: event1
