--- a/test/fixtures/resources.yml
+++ b/test/fixtures/resources.yml
@@ -3,7 +3,9 @@
 resource1:
   paper: paper1 
   url: http://mydomain.com/files/myfile1
+  user: user1
 
 resource2:
   paper: paper1 
   url: http://mydomain.com/files/myfile2
+  user: user1
