--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -13,11 +13,11 @@ user1:
   login: user1
   email: user1@email.com
   crypted_password: aaa
-  role: <%= User::ROLE_USER %>
+  role: <%= User::ROLE[:USER] %>
   
 user2:
   name: User 2
   login: user2
   email: user2@email.com
   crypted_password: aaa
-  role: <%= User::ROLE_USER %>
+  role: <%= User::ROLE[:USER] %>
