--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -24,4 +24,13 @@ user2:
   email: user2@email.com
   crypted_password: aaa
   role: <%= User::ROLE[:USER] %>
+  public_profile: false
+
+user3:
+  name: User 3
+  permalink: user-3
+  login: user3
+  email: user3@email.com
+  crypted_password: aaa
+  role: <%= User::ROLE[:ADMIN] %>
   public_profile: true
