--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -24,6 +24,15 @@ user2:
   email: user2@email.com
   crypted_password: aaa
   role: <%= User::ROLE[:USER] %>
+  public_profile: true
+
+private:
+  name: User with private profile
+  permalink: user-private
+  login: privateUser
+  email: user-private@email.com
+  crypted_password: aaa
+  role: <%= User::ROLE[:USER] %>
   public_profile: false
 
 user_admin:
