--- a/test/fixtures/papers.yml
+++ b/test/fixtures/papers.yml
@@ -12,7 +12,7 @@ paper1:
   description: Just a Paper
   family: <%= Paper::FAMILY[:TUTORIAL] %>
   status: <%= Paper::STATUS[:ACEPTED] %>
-  date: <%= Time.now.to_s(:db) %>
+  date: 2008-01-01 01:01
   minutes: 1
   room: room1
   creator: user1
@@ -23,7 +23,7 @@ paper2:
   description: Just a Paper 2
   family: <%= Paper::FAMILY[:TUTORIAL] %>
   status: <%= Paper::STATUS[:ACEPTED] %>
-  date: <%= Time.now.to_s(:db) %>
+  date: 2008-01-01 02:01
   minutes: 1
   room: room1
   creator: user1
@@ -34,7 +34,7 @@ paper3:
   description: Just a Paper 3
   family: <%= Paper::FAMILY[:TUTORIAL] %>
   status: <%= Paper::STATUS[:PROPOSED] %>
-  date: <%= Time.now.to_s(:db) %>
+  date: 2008-01-02 01:01
   minutes: 1
   room: room1
   creator: user1
