--- a/test/fixtures/carts.yml
+++ b/test/fixtures/carts.yml
@@ -19,3 +19,7 @@ cart_user1_event2_not_purchased:
 cart_user1_empty_and_not_purchased:
   user: user1
   status: <%= Cart::STATUS[:ON_SESSION] %>
+  
+cart_user_everything_paid:
+  user: user_everything_paid
+  status: <%= Cart::STATUS[:COMPLETED] %>
