--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 test:
-  site_url: 127.0.0.1:3000
+  site_domain: 127.0.0.1:3000
   site_name: EuRuKo_test
   email_sender: EuRuKo <euruko@euruko.org>
   email_notification_recipients: fguillen.mail@gmail.com
@@ -9,7 +9,7 @@ test:
   paypal_secret: paypal_secret
 
 development:
-  site_url: 127.0.0.1:3000
+  site_domain: 127.0.0.1:3000
   site_name: EuRuKo_development
   email_sender: EuRuKo <euruko@euruko.org>
   email_notification_recipients: fguillen.mail@gmail.com
@@ -19,7 +19,7 @@ development:
   paypal_secret: paypal_secret
 
 production:
-  site_url: eurukostaging.fernandoguillen.info
+  site_domain: eurukostaging.fernandoguillen.info
   site_name: EuRuKo
   email_sender: EuRuKo <euruko@euruko.org>
   email_notification_recipients: fguillen.mail@gmail.com
