deleting schema.rb from repository

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ config/deploy.rb
 log/*.log
 tmp/*
 db/*.sqlite3
+db/schema.rb
 config/database.yml
 config/initializers/site_keys.rb
 public/resources/*
