sending notifications on purchase issues

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,7 @@
 test:
   site_domain: 127.0.0.1:3000
   site_name: EuRuKo_test
-  email_sender: EuRuKo <euruko@euruko.org>
+  email_sender: EuRuKo <info@euruko2009.org>
   email_notification_recipients: [fguillen.mail@gmail.com]
   paypal_url: https://www.sandbox.paypal.com/cgi-bin/webscr
   paypal_seller: seller_1231200230_biz@gmail.com
@@ -11,7 +11,7 @@ test:
 development:
   site_domain: 127.0.0.1:3000
   site_name: EuRuKo_development
-  email_sender: EuRuKo <euruko@euruko.org>
+  email_sender: EuRuKo <info@euruko2009.org>
   email_notification_recipients: [fguillen.mail@gmail.com]
   paypal_url: https://www.sandbox.paypal.com/cgi-bin/webscr
   paypal_seller: seller_1231200230_biz@gmail.com
@@ -21,7 +21,7 @@ development:
 production:
   site_domain: eurukostaging.fernandoguillen.info
   site_name: EuRuKo
-  email_sender: EuRuKo <euruko@euruko.org>
+  email_sender: EuRuKo <info@euruko2009.org>
   email_notification_recipients: [fguillen.mail@gmail.com]
   paypal_url: https://www.sandbox.paypal.com/cgi-bin/webscr
   paypal_seller: seller_1231200230_biz@gmail.com
