--- a/config/config.yml
+++ b/config/config.yml
@@ -11,6 +11,10 @@ test:
   twitter_user: pepe
   twitter_pass: pepe
   twitter_notification_step: 1
+  tax_percent: 16
+  seller_invoice_info: "Name Company \nAddress Company with éxtraños carácteres \nG65037772"
+  invoices_pdf_path: /tmp/invoices
+  invoices_serial_prefix: euruko-2009-
   
 development:
   site_domain: 127.0.0.1:3000
@@ -25,7 +29,11 @@ development:
   twitter_user: pepe
   twitter_pass: pepe
   twitter_notification_step: 1
-  
+  tax_percent: 16
+  seller_invoice_info: "Name Company \nAddress Company with éxtraños carácteres \nG65037772"
+  invoices_pdf_path: /public/invoices
+  invoices_serial_prefix: euruko-2009-
+    
 production:
   site_domain: eurukostaging.fernandoguillen.info
   site_name: EuRuKo
@@ -39,3 +47,7 @@ production:
   twitter_user: pepe
   twitter_pass: pepe
   twitter_notification_step: 1
+  tax_percent: 16
+  seller_invoice_info: "Spanish Ruby Users Group \nTravessera de les Corts 48, Sobreático 2a \n08903 L'Hospitalet de Llobregat \nBarcelona (Spain) \nG65037772"
+  invoices_pdf_path:  /public/invoices
+  invoices_serial_prefix: euruko-2009-
